# gbfs-toolkit

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml
1.5/: 404.html  index.html  objects.inv  sitemap.xml
1.5/changelog/: index.html
1.5/citing/: index.html
1.5/contributing/: index.html
1.5/data-model/: index.html
1.5/examples/: index.html
1.5/examples/01-audit-a-feed/: index.html
1.5/examples/02-collect-a-snapshot/: index.html
1.5/examples/03-analyze-history/: index.html
1.5/examples/04-equity-and-coverage/: index.html
1.5/examples/05-rigorous-audit/: index.html
1.5/examples/07-free-floating-fleets/: index.html
1.5/examples/08-service-reliability/: index.html
1.5/examples/09-contextualize/: index.html
1.5/examples/10-macro-scale-audit/: index.html
1.5/getting-started/: index.html
1.5/glossary/: index.html
1.5/guide/: index.html
1.5/human-validation/: index.html
1.5/methodology/: index.html
1.5/notebooks/: quickstart.ipynb
1.5/reference/: index.html
1.5/reference/SUMMARY/: index.html
1.5/search/: search_index.json
1.5/stylesheets/: extra.css
1.6/: 404.html  index.html  sitemap.xml
1.6/changelog/: index.html
1.6/citing/: index.html
1.6/contributing/: index.html
1.6/data-model/: index.html
1.6/examples/: index.html
1.6/examples/01-audit-a-feed/: index.html
1.6/examples/02-collect-a-snapshot/: index.html
1.6/examples/03-analyze-history/: index.html
1.6/examples/04-equity-and-coverage/: index.html
1.6/examples/05-rigorous-audit/: index.html
1.6/examples/07-free-floating-fleets/: index.html
1.6/examples/08-service-reliability/: index.html
1.6/examples/09-contextualize/: index.html
1.6/examples/10-macro-scale-audit/: index.html
1.6/getting-started/: index.html
1.6/glossary/: index.html
1.6/guide/: index.html
1.6/human-validation/: index.html
1.6/methodology/: index.html
1.6/reference/: index.html
1.6/reference/SUMMARY/: index.html
1.6/search/: search_index.json
1.7/: 404.html  index.html  sitemap.xml
1.7/changelog/: index.html
1.7/citing/: index.html
1.7/contributing/: index.html
1.7/data-model/: index.html
1.7/examples/: index.html
1.7/examples/01-audit-a-feed/: index.html
1.7/examples/02-collect-a-snapshot/: index.html
1.7/examples/03-analyze-history/: index.html
1.7/examples/04-equity-and-coverage/: index.html
1.7/examples/05-rigorous-audit/: index.html
1.7/examples/07-free-floating-fleets/: index.html
1.7/examples/08-service-reliability/: index.html
1.7/examples/09-contextualize/: index.html
1.7/examples/10-macro-scale-audit/: index.html
1.7/getting-started/: index.html
1.7/glossary/: index.html
1.7/guide/: index.html
1.7/human-validation/: index.html
1.7/methodology/: index.html
1.7/reference/: index.html
1.7/reference/SUMMARY/: index.html
1.7/search/: search_index.json
api/: index.html
benchmarks/: test_benchmarks.py
changelog/: index.html
citing/: index.html
contributing/: index.html
data-model/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelog/: index.html
dev/citing/: index.html
dev/contributing/: index.html
dev/data-model/: index.html
dev/examples/: index.html
dev/getting-started/: index.html
dev/glossary/: index.html
dev/guide/: index.html
dev/human-validation/: index.html
dev/methodology/: index.html
dev/reference/: index.html
dev/search/: search_index.json
docs/: api.md  citing.md  data-model.md  examples.md  getting-started.md  glossary.md  guide.md  human-validation.md  index.md  methodology.md
docs/examples/: 01-audit-a-feed.md  02-collect-a-snapshot.md  03-analyze-history.md  04-equity-and-coverage.md  05-rigorous-audit.md  06-equity-rebalancing.md  07-free-floating-fleets.md  08-service-reliability.md  09-contextualize.md  10-macro-scale-audit.md
docs/stylesheets/: extra.css
examples/: 01_audit_a_feed.py  02_collect_snapshot.py  03_analyze_history.py  04_equity_and_coverage.py  05_rigorous_audit.py  06_equity_rebalancing.py  07_free_floating_fleets.py  08_service_reliability.py  09_contextualize.py  10_macro_scale_audit.py  11_flow_simulator.py  README.md  index.html
examples/01-audit-a-feed/: index.html
examples/02-collect-a-snapshot/: index.html
examples/03-analyze-history/: index.html
examples/04-equity-and-coverage/: index.html
getting-started/: index.html
glossary/: index.html
guide/: index.html
javascripts/: mathjax.js
methodology/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/gbfs_toolkit/: __init__.py  _internal.py  accessor.py  analysis.py  catalog.py  cli.py  cluster.py  datasets.py  diagnostics.py  errors.py  fetch.py  fleet.py  geo.py  geofencing.py  metrics.py  models.py  multimodal.py  normalize.py  osm.py  stats.py  timeseries.py
tests/: conftest.py  test_advanced_analytics.py  test_analysis_geo.py  test_api_catalogue.py  test_audit_sensitivity.py  test_audit_static.py  test_catalogue_agreement.py  test_cli.py  test_cluster.py  test_consolidation.py  test_empty_contract.py  test_ergonomics.py  test_examples.py  test_fetch.py  test_fleet.py  test_from_projects.py  test_geofencing.py  test_golden_master.py  test_graph.py  test_hardening.py  test_input_purity.py  test_metamorphic.py  test_multimodal.py  test_no_optional_dep_leak.py  test_normalize_catalog.py  test_numerical_validation.py  test_osm_surroundings.py  test_progress_and_doctests.py  test_properties.py  test_quality.py  test_research_algos.py  test_research_helpers.py  test_research_indicators.py  test_robustness.py  test_sim.py  test_stats.py  test_synthetic.py  test_timeseries.py  test_v160.py  test_v162_fixes.py  (+3 more)
(+606 files in other folders)
