[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gbfs-toolkit"
version = "1.4.0"
description = "Research-grade ingestion and semantic quality audit (A1–A7) for GBFS bike-share feeds"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rohan Fossé", email = "rfosse@cesi.fr"},
    {name = "Gaël Pallares"},
]
keywords = [
    "GBFS",
    "bike-sharing",
    "shared mobility",
    "data quality",
    "semantic validation",
    "open data",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
]

[project.optional-dependencies]
fetch = ["requests>=2.31"]
geo = ["geopandas>=0.14"]
osm = ["geopandas>=0.14"]  # enrich_with_osm (BYOG); fetch_osm_around also needs `osmnx`
parquet = ["pyarrow>=15.0"]
cluster = ["scikit-learn>=1.4"]
dtw = ["tslearn>=0.6"]  # shape-aware time-series clustering (method="dtw")
cli = ["rich>=13.0", "tqdm>=4.0"]  # richer terminal output: coloured audit tables + progress bars
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-include-markdown-plugin>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "requests>=2.31",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "geopandas>=0.14",  # exercises geo / osm / geofencing paths in CI
    "rich>=13.0",  # exercises the CLI rich-rendering path in CI
    "tqdm>=4.0",  # exercises the fetch_multiple progress path in CI
]

[project.scripts]
gbfs = "gbfs_toolkit.cli:main"

[project.urls]
Homepage = "https://github.com/cycling-data-lab/gbfs-toolkit"
Repository = "https://github.com/cycling-data-lab/gbfs-toolkit"

[tool.setuptools.package-data]
gbfs_toolkit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",
    # Mathematical / GBFS-spec notation is intentional (A1–A7 flags, MAD sigma).
    "N802",
    "N803",
    "N806",
]
