[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gbfs-toolkit"
version = "2.0.0"
description = "Research-grade ingestion and semantic quality audit (A1–A7) for GBFS bike-share feeds"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rohan Fossé", email = "rfosse@cesi.fr"},
    {name = "Gaël Pallares"},
]
keywords = [
    "GBFS",
    "bike-sharing",
    "shared mobility",
    "data quality",
    "semantic validation",
    "open data",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "pandas>=2.2",
]

[project.optional-dependencies]
fetch = ["requests>=2.31", "urllib3>=2.0"]  # build_session imports urllib3.util.Retry directly
geo = ["geopandas>=0.14", "shapely>=2.0"]  # geofencing imports shapely.geometry directly
osm = ["geopandas>=0.14"]  # enrich_with_osm (BYOG); fetch_osm_around also needs `osmnx`
parquet = ["pyarrow>=15.0"]
cluster = ["scikit-learn>=1.4"]
dtw = ["tslearn>=0.6"]  # shape-aware time-series clustering (method="dtw")
cli = ["rich>=13.0", "tqdm>=4.0"]  # richer terminal output: coloured audit tables + progress bars
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-include-markdown-plugin>=6.0",
    "mkdocs-gen-files>=0.5",  # generate the per-function reference pages
    "mkdocs-literate-nav>=0.6",  # SUMMARY.md drives the reference nav
    "mkdocs-section-index>=0.3",  # clickable section landing pages
    "mike>=2.0",  # versioned documentation (/1.5/, /latest/)
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "requests>=2.31",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "geopandas>=0.14",  # exercises geo / osm / geofencing paths in CI
    "rich>=13.0",  # exercises the CLI rich-rendering path in CI
    "tqdm>=4.0",  # exercises the fetch_multiple progress path in CI
    "esda>=2.5",  # numerical cross-validation of Moran's I / LISA
    "libpysal>=4.9",  # spatial weights for the esda cross-checks
    "lifelines>=0.27",  # numerical cross-validation of outage survival vs Kaplan-Meier
    "mypy>=1.8",  # static type checking in CI
    "hypothesis>=6.0",  # property-based invariant tests
    "pytest-benchmark>=4.0",  # performance benchmarks (benchmarks/)
    "deptry>=0.20",  # flag undeclared / transitive imports (no borrowed deps)
    "nbmake>=1.5",  # execute the example notebook in CI
    "ipykernel>=6.0",  # kernel for nbmake
    "interrogate>=1.7",  # docstring-coverage gate (pre-commit + CI)
]

[project.scripts]
gbfs = "gbfs_toolkit.interfaces.cli:main"

[project.urls]
Homepage = "https://github.com/cycling-data-lab/gbfs-toolkit"
Repository = "https://github.com/cycling-data-lab/gbfs-toolkit"

[tool.setuptools.package-data]
gbfs_toolkit = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # Upstream pandas 2.3 / numpy 2.5 interaction: pd.Timedelta(<string or kwargs>) emits a
    # generic-unit DeprecationWarning from pandas internals, independent of our usage. It will
    # be resolved by a pandas release; ignore it here so the real warnings stay visible.
    "ignore:The 'generic' unit for NumPy timedelta is deprecated:DeprecationWarning",
]

[tool.deptry]
# DEP002 (declared-but-unused) only fires on the dev/docs tooling extras (pytest, ruff,
# mkdocs, esda, ...), which are run by CI, not imported in src. The rules that matter for
# us are DEP001 (missing) and DEP003 (transitive/borrowed import, the jinja2-class bug).
ignore = ["DEP002"]

[tool.mypy]
files = ["src/gbfs_toolkit"]
python_version = "3.12"   # 3.12+ so numpy's PEP 695 stubs parse; our code targets 3.10+
ignore_missing_imports = true   # optional extras (geopandas, sklearn, esda, ...) ship no stubs
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",
    # Mathematical / GBFS-spec notation is intentional (A1–A7 flags, MAD sigma).
    "N802",
    "N803",
    "N806",
]

[tool.interrogate]
# Enforce docstring coverage on the public surface; fail CI/pre-commit below this.
fail-under = 90
ignore-init-method = true
ignore-magic = true
ignore-private = true
ignore-nested-functions = true
ignore-semiprivate = true
exclude = ["tests", "docs", "build", "src/gbfs_toolkit/interfaces/accessor.py"]
